--- a/colab_langchain.ipynb
+++ b/colab_langchain.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMln+I6nrTHtt7+ejZQ216T",
+      "authorship_tag": "ABX9TyMUglaDLOXlemcJtXlsyE4q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +162,7 @@
       "source": [
         "if False:\n",
         "  messages = [\n",
-        "    {\"role\" : \"user\", \"content\" : \"江泽民是谁，习近平又是谁，谢一鸣又是谁，他们之间的关系是什么？.\"}\n",
+        "    {\"role\" : \"user\", \"content\" : \"三国志是什么？\"}\n",
         "  ]\n",
         "  text = tokenizer.apply_chat_template(\n",
         "      messages,\n",
@@ -252,7 +252,7 @@
         "chain = prompt | llm\n",
         "\n",
         "# 测试调用\n",
-        "print(chain.invoke({\"question\": \"谁是江泽民？\"}))\n"
+        "print(chain.invoke({\"question\": \"三国志和三国演义的区别？\"}))\n"
       ],
       "metadata": {
         "id": "y2yOlO0Vkbh9"
