--- a/llamacpp+内网穿透.ipynb
+++ b/llamacpp+内网穿透.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPFPXDf9FUivkB1lPE1t6p4",
+      "authorship_tag": "ABX9TyOUWNrBUFSUNwzuae4HXjf5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -915,7 +915,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#获得秘钥后运行下面的server服务\n",
+        "#获得秘钥后运行下面的server服务，建议第二个，第一个不方便粘贴在terminal中\n",
         "\n",
         "# !python3 -m llama_cpp.server \\\n",
         "#   --model /root/.cache/huggingface/hub/models--Qwen--Qwen3-4B-GGUF/snapshots/bc640142c66e1fdd12af0bd68f40445458f3869b/Qwen3-4B-Q4_K_M.gguf \\\n",
