Token分布统计+正式swift CLI

--- a/ms-swift_魔搭+modelscope_GPU.ipynb
+++ b/ms-swift_魔搭+modelscope_GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a98ca136-04a3-47e9-ace5-1245ac87e96a",
    "metadata": {
     "collapsed": true,
@@ -326,6 +326,7 @@
    ],
    "source": [
     "!pip install 'ms-swift[all]' -U\n",
+    "!pip install swanlab\n",
     "!pip install bitsandbytes"
    ]
   },
@@ -979,7 +980,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "d049e35d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 先统计一下token的数量和分布\n",
+    "import json\n",
+    "from collections import Counter\n",
+    "from modelscope import AutoTokenizer\n",
+    "\n",
+    "# 用 Qwen3 的 tokenizer 统计长度\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    \"Qwen/Qwen3-4B\",\n",
+    "    trust_remote_code=True\n",
+    ")\n",
+    "\n",
+    "def count_tokens(messages):\n",
+    "    text = \"\"\n",
+    "    for turn in messages:\n",
+    "        role = turn.get(\"role\", \"\")\n",
+    "        content = turn.get(\"content\", \"\")\n",
+    "        text += f\"{role}: {content}\\n\"\n",
+    "    return len(tokenizer.encode(text))\n",
+    "\n",
+    "input_path = \"/mnt/workspace/sharegpt_output.jsonl\"\n",
+    "\n",
+    "lengths = []\n",
+    "idx = 0\n",
+    "\n",
+    "print(\"Scanning dataset and collecting token lengths...\")\n",
+    "\n",
+    "with open(input_path, \"r\", encoding=\"utf-8\") as fin:\n",
+    "    for line in fin:\n",
+    "        idx += 1\n",
+    "        data = json.loads(line)\n",
+    "        messages = data.get(\"messages\", [])\n",
+    "        token_count = count_tokens(messages)\n",
+    "        lengths.append(token_count)\n",
+    "\n",
+    "print(f\"\\nTotal samples: {len(lengths)}\")\n",
+    "if not lengths:\n",
+    "    raise SystemExit(\"No samples found, check input file.\")\n",
+    "\n",
+    "# 基本统计\n",
+    "min_len = min(lengths)\n",
+    "max_len = max(lengths)\n",
+    "avg_len = sum(lengths) / len(lengths)\n",
+    "\n",
+    "print(\"\\n=== Basic stats ===\")\n",
+    "print(f\"Min tokens: {min_len}\")\n",
+    "print(f\"Max tokens: {max_len}\")\n",
+    "print(f\"Avg tokens: {avg_len:.2f}\")\n",
+    "\n",
+    "# 1）按区间统计分布（可根据 max_len 自动设定上限）\n",
+    "bin_size = 256  # 你可以改成 128/512 等\n",
+    "max_bin_edge = ((max_len // bin_size) + 1) * bin_size\n",
+    "\n",
+    "hist = Counter((l // bin_size) * bin_size for l in lengths)\n",
+    "\n",
+    "print(\"\\n=== Histogram by bins (bin_size = {} tokens) ===\".format(bin_size))\n",
+    "print(\"Bin_start\\tBin_end\\tCount\\tRatio\")\n",
+    "total = len(lengths)\n",
+    "for bin_start in range(0, max_bin_edge + 1, bin_size):\n",
+    "    bin_end = bin_start + bin_size - 1\n",
+    "    count = hist.get(bin_start, 0)\n",
+    "    ratio = count / total * 100\n",
+    "    if count > 0:\n",
+    "        print(f\"{bin_start:4d}\\t\\t{bin_end:4d}\\t{count:5d}\\t{ratio:6.2f}%\")\n",
+    "\n",
+    "# 2）关注“尾部”区间（接近最长样本）\n",
+    "tail_threshold = int(max_len * 0.75)  # 比如后 25% 段\n",
+    "tail_lengths = [l for l in lengths if l >= tail_threshold]\n",
+    "\n",
+    "print(\"\\n=== Tail distribution (>= {} tokens) ===\".format(tail_threshold))\n",
+    "print(f\"Tail samples: {len(tail_lengths)} ({len(tail_lengths) / total * 100:.2f}% of all)\")\n",
+    "\n",
+    "tail_bin_size = 128\n",
+    "tail_hist = Counter((l // tail_bin_size) * tail_bin_size for l in tail_lengths)\n",
+    "print(\"Bin_start\\tBin_end\\tCount\\tRatio (within tail)\")\n",
+    "for bin_start in range(tail_threshold // tail_bin_size * tail_bin_size, max_bin_edge + 1, tail_bin_size):\n",
+    "    bin_end = bin_start + tail_bin_size - 1\n",
+    "    count = tail_hist.get(bin_start, 0)\n",
+    "    if len(tail_lengths) > 0:\n",
+    "        ratio = count / len(tail_lengths) * 100\n",
+    "    else:\n",
+    "        ratio = 0.0\n",
+    "    if count > 0:\n",
+    "        print(f\"{bin_start:4d}\\t\\t{bin_end:4d}\\t{count:5d}\\t{ratio:6.2f}%\")\n",
+    "\n",
+    "# 3）候选 max_length 切点的“保留比例”分析\n",
+    "cut_points = [1024, 1536, 2048, 2560, 3072, 3584, 4096]\n",
+    "\n",
+    "print(\"\\n=== Cut-point analysis (how many samples kept if max_length = X) ===\")\n",
+    "print(\"max_length\\tKept\\tRatio\")\n",
+    "lengths_sorted = sorted(lengths)\n",
+    "for cp in cut_points:\n",
+    "    kept = sum(1 for l in lengths_sorted if l <= cp)\n",
+    "    ratio = kept / total * 100\n",
+    "    print(f\"{cp:5d}\\t\\t{kept:5d}\\t{ratio:6.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "97a4dbd3-4937-45f5-9f49-6947bb244cff",
    "metadata": {
     "collapsed": true,
@@ -1362,7 +1466,7 @@
     "\n",
     "# 你可以用 Qwen2 或 Qwen3 的 tokenizer，统计长度都没问题\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"Qwen/Qwen3-8B\",\n",
+    "    \"Qwen/Qwen3-4B\",\n",
     "    trust_remote_code=True\n",
     ")\n",
     "\n",
@@ -1405,7 +1509,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "36cbaf70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 切分训练集，验证集和测试集\n",
+    "import random\n",
+    "from pathlib import Path\n",
+    "\n",
+    "src_path = Path(\"/mnt/workspace/sharegpt_filtered.jsonl\")\n",
+    "lines = src_path.read_text(encoding=\"utf-8\").splitlines()\n",
+    "n = len(lines)\n",
+    "print(f\"Total samples: {n}\")\n",
+    "\n",
+    "# 按比例划分\n",
+    "train_ratio = 0.8   # 80% 训练\n",
+    "val_ratio = 0.1     # 10% 验证\n",
+    "test_ratio = 0.1    # 10% 测试\n",
+    "\n",
+    "assert abs(train_ratio + val_ratio + test_ratio - 1.0) < 1e-6\n",
+    "\n",
+    "random.seed(42)\n",
+    "random.shuffle(lines)\n",
+    "\n",
+    "train_end = int(n * train_ratio)\n",
+    "val_end = train_end + int(n * val_ratio)\n",
+    "\n",
+    "train = lines[:train_end]\n",
+    "val = lines[train_end:val_end]\n",
+    "test = lines[val_end:]\n",
+    "\n",
+    "print(f\"Train: {len(train)}, Val: {len(val)}, Test: {len(test)}\")\n",
+    "\n",
+    "Path(\"/mnt/workspace/train.jsonl\").write_text(\"\\n\".join(train), encoding=\"utf-8\")\n",
+    "Path(\"/mnt/workspace/val.jsonl\").write_text(\"\\n\".join(val), encoding=\"utf-8\")\n",
+    "Path(\"/mnt/workspace/test.jsonl\").write_text(\"\\n\".join(test), encoding=\"utf-8\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e7514dba-d52d-4cbc-8648-6caee11711b4",
    "metadata": {
     "collapsed": true,
@@ -11334,15 +11478,17 @@
    "source": [
     "!CUDA_VISIBLE_DEVICES=0 \\\n",
     " swift sft \\\n",
-    "    --model Qwen/Qwen3-8B \\\n",
+    "    --model Qwen/Qwen3-4B \\\n",
     "    --train_type lora \\\n",
-    "    --dataset /mnt/workspace/sharegpt_filtered.jsonl \\\n",
+    "   #  --dataset /mnt/workspace/sharegpt_filtered.jsonl \\\n",
     "    --torch_dtype bfloat16 \\\n",
     "    --bnb_4bit_compute_dtype bfloat16 \\\n",
     "    --bnb_4bit_quant_type nf4 \\\n",
     "    --bnb_4bit_use_double_quant true \\\n",
     "    --quant_method bnb \\\n",
     "    --quant_bits 4 \\\n",
+    "    --dataset /mnt/workspace/train.jsonl \\\n",
+    "    --eval_dataset /mnt/workspace/val.jsonl \\\n",
     "    --num_train_epochs 1 \\\n",
     "    --per_device_train_batch_size 1 \\\n",
     "    --per_device_eval_batch_size 1 \\\n",
@@ -11359,8 +11505,54 @@
     "    --output_dir output \\\n",
     "    --warmup_ratio 0.05 \\\n",
     "    --dataloader_num_workers 4 \\\n",
-    "    --model_author swift \\\n",
-    "    --model_name ai-person"
+    "    --model_author yiming \\\n",
+    "    --model_name ai-person \\\n",
+    "    --report_to swanlab \\\n",
+    "    --swanlab_project swift-Qwen4b-dichan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f8d39a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#升级版本，适合正式训练\n",
+    "!CUDA_VISIBLE_DEVICES=0 \\\n",
+    " swift sft \\\n",
+    "    --model Qwen/Qwen3-4B \\\n",
+    "    --train_type lora \\\n",
+    "   #  --dataset /mnt/workspace/sharegpt_filtered.jsonl \\\n",
+    "    --torch_dtype bfloat16 \\\n",
+    "    --bnb_4bit_compute_dtype bfloat16 \\\n",
+    "    --bnb_4bit_quant_type nf4 \\\n",
+    "    --bnb_4bit_use_double_quant true \\\n",
+    "    --quant_method bnb \\\n",
+    "    --quant_bits 4 \\\n",
+    "    --dataset /mnt/workspace/train.jsonl \\\n",
+    "    --eval_dataset /mnt/workspace/val.jsonl \\\n",
+    "    --num_train_epochs 3 \\                       # 修改1：1 -> 3，提升收敛质量（贴近 Swift 默认推荐值）\n",
+    "    --per_device_train_batch_size 1 \\\n",
+    "    --per_device_eval_batch_size 1 \\\n",
+    "    --learning_rate 1e-4 \\\n",
+    "    --lora_rank 8 \\\n",
+    "    --lora_alpha 32 \\\n",
+    "    --target_modules all-linear \\\n",
+    "    --gradient_accumulation_steps 32 \\           # 修改2：16 -> 32，增大全局 batch，略改善稳定性，对显存影响极小\n",
+    "    --eval_steps 100 \\                           # 修改3：50 -> 100，减轻评估开销，显存压力微减\n",
+    "    --save_steps 200 \\                           # 修改4：50 -> 200，减少存盘频率（对显存无影响）\n",
+    "    --save_total_limit 2 \\\n",
+    "    --logging_steps 10 \\                         # 修改5：5 -> 10，减少日志频率（对显存无影响）\n",
+    "    --max_length 4096 \\                          # 修改6：2048 -> 4096，满足你必须 4096 的需求（显存压力↑↑）\n",
+    "    --gradient_checkpointing true \\              # 修改7：新增，激活重计算，显存占用大幅下降，计算量↑\n",
+    "    --output_dir output \\\n",
+    "    --warmup_ratio 0.05 \\\n",
+    "    --dataloader_num_workers 2 \\                 # 修改8：4 -> 2，减轻 CPU IO 压力，对显存无影响\n",
+    "    --model_author yiming \\\n",
+    "    --model_name ai-person \\\n",
+    "    --report_to swanlab \\\n",
+    "    --swanlab_project swift-Qwen4b-dichan"
    ]
   },
   {
